SERVER-20322 Use a separate session when creating new indexes in WiredTiger.